--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                 <h1>Retail Billing App</h1>
                 <p id="current-user-display" style="font-size: 14px; color: #666; margin-top: -10px;">Logged in as: <span id="loggedInStaffName"></span></p>
             </div>
-            <button id="logout-btn" class="delete-btn" style="padding: 5px 10px; font-size: 14px;">Lock / Switch User</button>
+            <div style="display: flex; gap: 10px;">
+                <button id="logout-btn" class="secondary-btn" style="padding: 5px 10px; font-size: 14px;">Lock Terminal</button>
+                <button id="full-logout-btn" class="delete-btn" style="padding: 5px 10px; font-size: 14px;">Logout</button>
+            </div>
         </div>
         
         <div class="nav-buttons">
