--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventory Management App</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div id="auth-container" class="container" style="max-width: 400px; margin-top: 100px;">
@@ -165,7 +166,13 @@
             </div>
 
             <div class="card">
-                <h2>Add Item to Bill</h2>
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+                    <h2 style="margin: 0;">Add Item to Bill</h2>
+                    <div style="display: flex; align-items: center; gap: 5px;">
+                        <input type="checkbox" id="scannerMode" style="width: 18px; height: 18px;">
+                        <label for="scannerMode" style="font-weight: bold; cursor: pointer;">Scanner Mode</label>
+                    </div>
+                </div>
                 <form id="billing-form">
                     <div class="form-row">
                         <div class="form-group" style="flex: 2;">
@@ -282,6 +289,22 @@
                     <div class="stat-card">
                         <h3>Total Items</h3>
                         <p class="stat-value" id="totalStockCount">0</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Charts Section -->
+            <div style="display: flex; gap: 20px; flex-wrap: wrap; margin-bottom: 20px;">
+                <div class="card" style="flex: 2; min-width: 300px;">
+                    <h2>Sales Trend (Last 30 Days)</h2>
+                    <div style="height: 300px;">
+                        <canvas id="salesChart"></canvas>
+                    </div>
+                </div>
+                <div class="card" style="flex: 1; min-width: 300px;">
+                    <h2>Top Categories</h2>
+                    <div style="height: 300px;">
+                        <canvas id="categoryChart"></canvas>
                     </div>
                 </div>
             </div>
@@ -430,6 +453,14 @@
                     <div class="form-group">
                         <label for="defaultTax">Default Tax Rate (%)</label>
                         <input type="number" id="defaultTax" min="0" step="0.01" value="0">
+                    </div>
+                    <div class="form-group">
+                        <label for="printerFormat">Printer Format</label>
+                        <select id="printerFormat" style="width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px;">
+                            <option value="A4">Standard (A4/Letter)</option>
+                            <option value="80mm">Thermal 80mm</option>
+                            <option value="58mm">Thermal 58mm</option>
+                        </select>
                     </div>
                     <button type="submit">Save Settings</button>
                 </form>
