--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group">
+                        <label for="itemMinQty">Min Qty (Reorder Level)</label>
+                        <input type="number" id="itemMinQty" min="0" placeholder="e.g. 5">
+                        <small style="color: #666; font-size: 11px;">If stock goes below this, it shows in Low Stock Alerts</small>
+                    </div>
+                    <div class="form-group">
                         <label for="itemMRP">MRP (₹)</label>
                         <input type="number" id="itemMRP" required min="0" step="0.01">
                     </div>
@@ -150,6 +155,7 @@
                             <th>Name</th>
                             <th>Category</th>
                             <th>Quantity</th>
+                            <th>Min Qty</th>
                             <th>MRP (₹)</th>
                             <th>Cost (₹)</th>
                             <th>Selling (₹)</th>
@@ -395,6 +401,8 @@
                                     <th>Item</th>
                                     <th>Category</th>
                                     <th>Current</th>
+                                    <th>Min</th>
+                                    <th>Reorder</th>
                                     <th>Status</th>
                                     <th>Action</th>
                                 </tr>
